pkg/ingress/kube/gateway/istio/testdata/status.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: higress
spec:
  controllerName: higress.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: higress-system
spec:
  addresses:
  - value: higress-gateway
    type: Hostname
  gatewayClassName: higress
  listeners:
  - name: a
    hostname: "a.example"
    port: 80
    protocol: HTTP
  - name: b
    hostname: "b.example"
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: existing-istio-last
  namespace: higress-system
spec:
  parentRefs:
  - name: gateway
  - name: not-istio
  rules:
  - backendRefs:
    - name: httpbin
      port: 80
status:
  parents:
  - controllerName: example.com/not-istio
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: not-istio
      namespace: higress-system
  - controllerName: higress.io/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: higress-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: existing-istio-first
  namespace: higress-system
spec:
  parentRefs:
  - name: gateway
  - name: not-istio
  rules:
  - backendRefs:
    - name: httpbin
      port: 80
status:
  parents:
  - controllerName: higress.io/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: higress-system
  - controllerName: example.com/not-istio
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: not-istio
      namespace: higress-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stale-istio-reference
  namespace: higress-system
spec:
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: httpbin
          port: 80
status:
  parents:
    - controllerName: higress.io/gateway-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway
        namespace: higress-system
    - controllerName: higress.io/gateway-controller # We do own this one so should prune it
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: not-istio
        namespace: higress-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stale-other-reference
  namespace: higress-system
spec:
  parentRefs:
  - name: gateway
  rules:
  - backendRefs:
    - name: httpbin
      port: 80
status:
  parents:
  - controllerName: higress.io/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: higress-system
  - controllerName: example.com/not-istio # We don't own this one so will leave it
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: not-istio
      namespace: higress-system
